--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -55,16 +55,16 @@ score_queue_player:
     score: 100 
   s_left_inner_outline_active:
     score: 100 
-  s_left_center_drop_target_active:
-    score: 1000
-  s_left_out_top_drop_target_active:
-    score: 1000 
-  s_left_in_top_drop_target_active:
-    score: 1000 
-  s_right_in_top_drop_target_active:
-    score: 1000 
-  s_right_out_top_drop_target_active:
-    score: 1000 
+  # s_left_center_drop_target_active:
+  #   score: 1000
+  # s_left_out_top_drop_target_active:
+  #   score: 1000 
+  # s_left_in_top_drop_target_active:
+  #   score: 1000 
+  # s_right_in_top_drop_target_active:
+  #   score: 1000 
+  # s_right_out_top_drop_target_active:
+  #   score: 1000 
   score_spinner:
     score: 100 * current_player.spinner_multiplier
   score_saucer:
@@ -114,7 +114,7 @@ show_player:
   ball_started:
     melody_startball:
       action: play
-      speed: 7.50
+      speed: 8
       loops: 0
       sync_ms: 1000
 
