--- a/modes/saucer_50k_collect/config/saucer_50k_collect.yaml
+++ b/modes/saucer_50k_collect/config/saucer_50k_collect.yaml
@@ -7,7 +7,17 @@ mode:
 
 event_player:
    right_saucer_feature_ended:
-     - super_pops_enabled
+    - super_pops_enabled
+   timer_score_50k_tick:
+    - score_10k
+   timer_score_50k_complete:
+    - saucer_feature_50k_collect_ended
+
+
+# queue_relay_player:
+#   right_saucer_feature_ended:
+#     post: saucer_feature_50k_collect_started
+#     wait_for: saucer_feature_50k_collect_ended
 
 show_player:
    mode_saucer_50k_collect_started:
@@ -20,3 +30,14 @@ show_player:
            speed: 5 
    super_pops_enabled:
        saucer_feature_50k_collectShow: stop
+
+timers:
+  score_50k:
+    start_value: 5 
+    end_value: 0
+    direction: down
+    tick_interval: 100ms
+    control_events:
+      - action: restart
+        event: saucer_feature_50k_collect_started
+
