--- a/modes/saucer_50k_collect/config/saucer_50k_collect.yaml
+++ b/modes/saucer_50k_collect/config/saucer_50k_collect.yaml
@@ -6,18 +6,23 @@ mode:
    priority: 510
 
 event_player:
-   right_saucer_feature_ended:
-    - super_pops_enabled
+  #  right_saucer_feature_ended:
+  #   - super_pops_enabled
    timer_score_50k_tick:
     - score_10k
    timer_score_50k_complete:
     - saucer_feature_50k_collect_ended
 
 
-# queue_relay_player:
-#   right_saucer_feature_ended:
-#     post: saucer_feature_50k_collect_started
-#     wait_for: saucer_feature_50k_collect_ended
+queue_event_player:
+  right_saucer_feature_ending:
+    queue_event: resolve_50k_bonus
+    events_when_finished: super_pops_enabled
+
+queue_relay_player:
+   resolve_50k_bonus:
+     post: saucer_feature_50k_collect_started
+     wait_for: saucer_feature_50k_collect_ended
 
 show_player:
    mode_saucer_50k_collect_started:
@@ -27,7 +32,7 @@ show_player:
            key: saucer_feature_50k_collectShow
            action: play
            priority: 100
-           speed: 5 
+           speed: 3 
    super_pops_enabled:
        saucer_feature_50k_collectShow: stop
 
@@ -36,7 +41,7 @@ timers:
     start_value: 5 
     end_value: 0
     direction: down
-    tick_interval: 100ms
+    tick_interval: 200ms
     control_events:
       - action: restart
         event: saucer_feature_50k_collect_started
