--- a/modes/saucer_lites_double_bonus/config/saucer_lites_double_bonus.yaml
+++ b/modes/saucer_lites_double_bonus/config/saucer_lites_double_bonus.yaml
@@ -10,10 +10,19 @@ mode:
 #    right_saucer_feature_ended:
 #      - double_bonus_enabled
 
+event_player:
+    saucer_feature_50k_collect_started:
+        - double_bonus_enabled
+
 queue_event_player:
-  right_saucer_feature_ending:
+  saucer_feature_50k_collect_started:
     queue_event: resolve_double_bonus
-    events_when_finished: double_bonus_enabled
+    events_when_finished: saucer_feature_50k_collect_ended
+
+queue_relay_player:
+  right_saucer_feature_ending:
+    post: saucer_feature_50k_collect_started
+    wait_for: saucer_feature_50k_collect_ended
 
 show_player:
     mode_saucer_lites_double_bonus_started:
@@ -31,7 +40,7 @@ show_player:
     resolve_double_bonus.2:
         melody_stars_startgame:
             action: play
-            speed: 8
+            speed: 9
             loops: 0
             sync_ms: 1000
             block_queue: true
