--- a/modes/saucer_50k_collect/config/saucer_50k_collect.yaml
+++ b/modes/saucer_50k_collect/config/saucer_50k_collect.yaml
@@ -3,7 +3,8 @@
 
 mode:
    start_events: saucer_50k_collect_lit
-   priority: 510
+  #  stop_events: saucer_feature_50k_collect_ended
+   priority: 540
 
 event_player:
   timer_score_50k_tick:
@@ -12,8 +13,11 @@ event_player:
     - super_pops_enabled
     - saucer_feature_50k_collect_ended
 
+
 queue_relay_player:
-  right_saucer_feature_ending:
+  # When the right saucer is being collected, wait until we score 
+  # 50k for the caucer collect.  
+  right_saucer_feature_ending.4:
     post: saucer_feature_50k_collect_started
     wait_for: saucer_feature_50k_collect_ended
 
@@ -26,7 +30,7 @@ show_player:
            action: play
            priority: 100
            speed: 3 
-   super_pops_enabled:
+   saucer_feature_50k_collect_started:
        saucer_feature_50k_collectShow: stop
 
 timers:
