--- a/modes/saucer_lites_top_center_hole/config/saucer_lites_top_center_hole.yaml
+++ b/modes/saucer_lites_top_center_hole/config/saucer_lites_top_center_hole.yaml
@@ -1,2 +1,25 @@
 #config_version=5
 ##! mode: saucer_lites_top_center_hole
+
+mode:
+   start_events: saucer_lites_top_center_hole_lit
+   stop_events: saucer_lites_top_center_hole_collect_ended
+   priority: 510
+
+event_player:
+   right_saucer_feature_ending.1:
+     - saucer_feature_lites_top_center_hole_collected
+     - top_center_hole_enabled
+     - saucer_lites_top_center_hole_collect_ended
+
+show_player:
+   mode_saucer_lites_top_center_hole_started:
+       flashing:
+           show_tokens:
+               lights: l_saucer_feature_lites_top_center_hole
+           key: saucer_feature_lites_top_center_holeShow
+           action: play
+           priority: 100
+           speed: 3
+   right_saucer_feature_ending.1:
+       saucer_feature_lites_top_center_holeShow: stop
