--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -20,6 +20,9 @@ queue_event_player:
   right_saucer_feature_end:
     queue_event: right_saucer_feature_ending
     events_when_finished: right_saucer_feature_ended
+  top_saucer_feature_end:
+    queue_event: top_saucer_feature_ending
+    events_when_finished: top_saucer_feature_ended
 
 event_player:
   right_saucer_feature_started: 
@@ -34,7 +37,7 @@ event_player:
   timer_top_saucer_score_5k_tick:
     - score_1k
   timer_top_saucer_score_5k_complete:
-    - top_saucer_feature_ended
+    - top_saucer_feature_end
    
 timers:
   right_saucer_score_5k:
@@ -87,6 +90,8 @@ score_queue_player:
     score: 100 * current_player.pops_multiplier
   score_advance_bonus:
     score: 1000
+  score_extra_ball:
+    score: 50000
   score_10k:
     score: 10000
   score_1k:
