--- a/modes/super_feature_triple_bonus/config/super_feature_triple_bonus.yaml
+++ b/modes/super_feature_triple_bonus/config/super_feature_triple_bonus.yaml
@@ -14,15 +14,13 @@ variable_player:
 event_player:
   top_center_hole_enabled:
     - saucer_lites_triple_bonus_lit
-  mode_super_feature_triple_bonus_started:
-    - top_center_hole_disabled
   saucer_feature_lites_extra_ball_lane_collected:
     - saucer_lites_top_center_hole_lit
 light_player:
   saucer_lites_triple_bonus_lit:
+    l_saucer_feature_lites_top_center_hole: on
     l_lites_triple_bonus_when_lit: on
-  top_center_hole_disabled:
-    l_lites_triple_bonus_when_lit: off
   "{current_player.bonus_multiplier==3}":
     l_triple_bonus_when_lit: on
+    l_lites_triple_bonus_when_lit: off
 
