--- a/modes/super_targets/config/super_targets.yaml
+++ b/modes/super_targets/config/super_targets.yaml
@@ -7,11 +7,17 @@ mode:
 
 variable_player:
   mode_super_targets_started:
+    bonus:
+      int: 1
+      action: set 
     bonus_collect_count:
       int: 0
       action: set
     bonus_multiplier: 
       int: 1
+      action: set
+    special_collect_count:
+      int: 0
       action: set
   double_bonus_enabled:
     bonus_multiplier: 
@@ -22,14 +28,27 @@ variable_player:
     bonus: 1 
   drop_target_hit:
     bonus_collect_count: 1
-  
+  saucer_lites_special_lit:
+    special_collect_count: 1
+  collect_special:
+    special_collect_count: -1
+
+coil_player:
+  collect_special:
+    c_knocker:
+      action: pulse
+
 event_player:
   s_adv_bonus_roll_over_active:
     - bonus_advances 
   s_left_out_outline_active:
     - bonus_advances
+  s_left_out_outline_active.2{current_player.special_collect_count>0}:
+    - collect_special
   s_right_out_outline_active:
     - bonus_advances
+  s_right_out_outline_active.2{current_player.special_collect_count>0}:
+    - collect_special
   drop_target_bank_big_reds_down:
     - score_10k
   bonus_advances{current_player.bonus_collect_count>0}:
@@ -40,7 +59,16 @@ light_player:
     l_advance_bonus: on
   "{current_player.bonus_multiplier==2}":
     l_double_bonus_when_lit: on
+  "{current_player.bonus_multiplier>=2}":
     l_saucer_feature_lites_double_bonus: on
+  saucer_lites_double_bonus_lit:
+    l_lites_special_lane: on
+  saucer_lites_special_lit:
+    l_lites_special_lane: off
+  "{current_player.special_collect_count>0}":
+    l_right_outlane_special_when_lit: on
+    l_left_outlane_special_when_lit: on
+  
 
 accruals:
   super_targets_double_bonus:
@@ -52,13 +80,16 @@ accruals:
       - drop_target_right_in_top_down
     events_when_complete: saucer_lites_double_bonus_lit
     events_when_hit: drop_target_hit
-  super_targets_triple_bonus:
+    disable_on_complete: true
+
+  super_targets_lites_special:
     events:
       - drop_target_left_down
       - drop_target_left_out_top_down
       - drop_target_left_in_top_down 
       - drop_target_right_out_top_down
       - drop_target_right_in_top_down
-    enable_events: saucer_lites_double_bonus_lit
-    events_when_complete: saucer_lites_triple_bonus_lit
+    events_when_complete: saucer_lites_special_lit
     events_when_hit: drop_target_hit
+    enable_events: saucer_lites_double_bonus_lit
+    disable_on_complete: true
